name:                graphReduction
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/graphReduction#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gr
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.11 && <4.12
                     , parsec
                     , graphviz
                     , directory
                     , filepath     
                     , fsnotify                
                     , bytestring     
                     , text      
                     , string-conversions 
                     , utf8-string
                     , stringsearch
  if os(linux)
    GHC-Options:        -Wall
  else
    if os(windows)
      GHC-Options:      -Wall -threaded
    else
      if os(darwin)
        GHC-Options:        -Wall